# MOTR

./: .gitignore  gitignore~
modules/Alpha/: Interface.cpp  est  test.cpp  test.cpp~
modules/Alpha/Alpha/: Alpha.1  CMakeCache.txt  CMakeLists.txt  CMakeLists.txt~  Doxyfile  Doxyfile~  EXE  Makefile  Makefile.backup  Makefile~  cmake_install.cmake  configuration.cpp  configuration.h  convlayer.cpp  convlayer.h  convnet.cpp  convnet.h  helper.cpp  helper.h  layer.cpp  layer.h  main.cpp  main.cpp~  test.cpp  test.h  trainsgd.h  utils.h  visual.cpp  visual.h
modules/Alpha/Alpha.xcodeproj/: project.pbxproj
modules/Alpha/data/: filter.txt
modules/approxemd/: DIST100.mat  DIST_W.mat  untitled.m
modules/approxemd/FastEMD/: emd_hat_signatures_interface.hpp  index.html.new
modules/beta/: libarmadillo.4.30.3.dylib
modules/beta/beta/: CMakeCache.txt  CMakeLists.txt  CMakeLists.txt~  EXE  Makefile  Makefile~  beta.1  cmake_install.cmake  convcore.cpp  convcore.h  example  layer.cpp  layer.h  main.cpp  main.cpp~  models.cpp  models.h  stdafx.h  test.cpp  test.cpp~  utils.cpp  utils.h
modules/beta/beta.xcodeproj/: project.pbxproj
modules/bitspython/: Untitled0.ipynb
modules/deformation/: EXPERIMENT_I_TRANSLATION.m~  Untitled0.ipynb  crudeseq.mat  getweight.m~
modules/humanvision/: cognitive.tex
modules/opencv/: CMakeCache.txt  DisplayImage  DisplayImage.cpp  Makefile  cmake_install.cmake
notes/: Hypothesis.tex
notes/Journal/: July3.tex  TSWLatexianTemp_000093.blg  TSWLatexianTemp_000093.synctex  TSWLatexianTemp_000093.tex  TSWLatexianTemp_000094.aux  TSWLatexianTemp_000094.blg  TSWLatexianTemp_000094.synctex  boosting.tex  emd.tex  journal.bib  journal.tex
(+775 files in other folders)
