cmake_minimum_required(VERSION 2.8)
project( Beta )
SET(CMAKE_CXX_FLAGS "-std=c++0x -O3 -larmadillo" )
add_executable( EXE main.cpp convcore.cpp layer.cpp utils.cpp)
find_package(armadillo REQUIRED)
find_package(BLAS)
if (BLAS_FOUND)
   include_directories(${BLAS_INCLUDE_DIR})
   MESSAGE(STATUS "BLAS:" ${BLAS_LIBRARIES})
   target_link_libraries( EXE ${BLAS_LIBRARIES})
endif (BLAS_FOUND)
find_package(LAPACK)
if (LAPACK_FOUND)
   include_directories(${LAPACK_INCLUDE_DIR})
   target_link_libraries( EXE ${LAPACK_LIBRARIES})
endif (LAPACK_FOUND)

SET(CMAKE_CXX_COMPILER /usr/local/bin/g++-4.8 )
