cmake_minimum_required(VERSION 2.8)
project( Beta )
SET(CMAKE_CXX_FLAGS "-std=c++11 -O3 -larmadillo" )
add_executable( EXE main.cpp convcore.cpp layer.cpp utils.cpp)
find_package(armadillo REQUIRED)
#set(Boost_USE_STATIC_LIBS ON)
#set(Boost_USE_MULTITHREADED ON)
#find_package(Threads)
#find_package(Boost 1.55.0 COMPONENTS log log_setup thread date_time filesystem system REQUIRED)
#   include_directories(${Boost_INCLUDE_DIR})
#   link_directories(${Boost_DIRECTOR_DIR})
#   MESSAGE(STATUS "boost:" ${Boost_LIBRARIES})
#   target_link_libraries(EXE ${Boost_LIBRARIES})
find_package(BLAS REQUIRED)
include_directories(${BLAS_INCLUDE_DIR})
MESSAGE(STATUS "BLAS:" ${BLAS_LIBRARIES})
target_link_libraries( EXE ${BLAS_LIBRARIES})
find_package(LAPACK REQUIRED)
include_directories(${LAPACK_INCLUDE_DIR})
MESSAGE(STATUS "LAPACK:" ${LAPACK_LIBRARIES})
target_link_libraries( EXE ${LAPACK_LIBRARIES})

SET(CMAKE_CXX_COMPILER /usr/local/bin/g++-4.8 )
